Switches to an interrupt based controller.

--- a/firmware/nyx/src/CMakeLists.txt
+++ b/firmware/nyx/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 set(SRC_FILES
-	main.cpp #
-	system_clock.cpp #
-	system_clock.hpp #
-	defer.hpp
+	# main.cpp #
+	# system_clock.cpp #
+	# system_clock.hpp #
+	# defer.hpp
+	main.c
 )
 
 add_avr_executable(nyx ${SRC_FILES})
